data loader added

--- a/trials.ipynb
+++ b/trials.ipynb
@@ -20,26 +20,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "a3164686",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "e:\\Anaconda\\envs\\fchatbot\\lib\\site-packages\\pinecone\\data\\index.py:1: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from tqdm.autonotebook import tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from langchain import PromptTemplate\n",
     "from langchain.chains import RetrievalQA\n",
     "from langchain.embeddings import HuggingFaceEmbeddings\n",
     "from langchain.vectorstores import Pinecone\n",
     "import pinecone\n",
-    "from langchain.document_loaders import PyMuPDFLoader, DirectoryLoader\n",
+    "from langchain.document_loaders import PyPDFLoader, DirectoryLoader\n",
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "from langchain.prompts import PromptTemplate\n",
     "from langchain.llms import CTransformers"
@@ -47,8 +38,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "1a6a0825",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PINECONE_API_KEY=\"pcsk_3gfoHz_HimFzXRuUKXea1Nxru1AgxKncD63hMgmpVhThVn7N7rsPrcr9Mjcjy6K4JkzVVu\"\n",
+    "PINECONE_API_ENV=\"us-east-1\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "a5fa22d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Extract data from the pdf\n",
+    "def load_pdf(data):\n",
+    "    loader= DirectoryLoader(data,\n",
+    "                            glob=\"*.pdf\",\n",
+    "                            loader_cls=PyPDFLoader)\n",
+    "    documents =loader.load()\n",
+    "    return documents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fe4e556",
    "metadata": {},
    "outputs": [],
    "source": []
