--- a/trials.ipynb
+++ b/trials.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "id": "9bb5ef47",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 68,
    "id": "a3164686",
    "metadata": {},
    "outputs": [],
@@ -33,12 +33,13 @@
     "from langchain.document_loaders import PyPDFLoader, DirectoryLoader\n",
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "from langchain.prompts import PromptTemplate\n",
-    "from langchain.llms import CTransformers"
+    "from langchain.llms import CTransformers\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "id": "1a6a0825",
    "metadata": {},
    "outputs": [],
@@ -48,8 +49,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ee746654",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 46,
    "id": "a5fa22d5",
    "metadata": {},
    "outputs": [],
@@ -65,8 +72,167 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "5fe4e556",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "extracted_data = load_pdf(\"data/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "82adb37b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#extracted_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "8413b36e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create text chunks\n",
+    "def text_split(extracted_data):\n",
+    "    text_splitter = RecursiveCharacterTextSplitter(chunk_size = 500, chunk_overlap = 20)\n",
+    "    text_chunks = text_splitter.split_documents(extracted_data)\n",
+    "    return text_chunks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "fe35630a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "length of my chunks: 42\n"
+     ]
+    }
+   ],
+   "source": [
+    "text_chunks = text_split(extracted_data)\n",
+    "print(\"length of my chunks:\",len(text_chunks))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "5da5e40e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#text_chunks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "3d345d54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#download embedding model\n",
+    "def download_hugging_face_embeddings():\n",
+    "    embeddings = HuggingFaceEmbeddings(model_name=\"TheBloke/Llama-2-7B-Chat-GGML\")\n",
+    "    return embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "9542f86e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: sentence-transformers in e:\\anaconda\\envs\\fchatbot\\lib\\site-packages (2.2.2)\n",
+      "Requirement already satisfied: transformers<5.0.0,>=4.6.0 in e:\\anaconda\\envs\\fchatbot\\lib\\site-packages (from sentence-transformers) (4.46.3)\n",
+      "Requirement already satisfied: tqdm in e:\\anaconda\\envs\\fchatbot\\lib\\site-packages (from sentence-transformers) (4.67.1)\n",
+      "Requirement already satisfied: torch>=1.6.0 in e:\\anaconda\\envs\\fchatbot\\lib\\site-packages (from sentence-transformers) (2.4.1)\n",
+      "Requirement already satisfied: torchvision in e:\\anaconda\\envs\\fchatbot\\lib\\site-packages (from sentence-transformers) (0.19.1)\n",
+      "Requirement already satisfied: numpy in e:\\anaconda\\envs\\fchatbot\\lib\\site-packages (from sentence-transformers) (1.24.4)\n",
+      "Requirement already satisfied: scikit-learn in e:\\anaconda\\envs\\fchatbot\\lib\\site-packages (from sentence-transformers) (1.3.2)\n",
+      "Requirement already satisfied: scipy in e:\\anaconda\\envs\\fchatbot\\lib\\site-packages (from sentence-transformers) (1.10.1)\n",
+      "Requirement already satisfied: nltk in e:\\anaconda\\envs\\fchatbot\\lib\\site-packages (from sentence-transformers) (3.9.1)\n",
+      "Requirement already satisfied: sentencepiece in e:\\anaconda\\envs\\fchatbot\\lib\\site-packages (from sentence-transformers) (0.2.0)\n",
+      "Requirement already satisfied: huggingface-hub>=0.4.0 in e:\\anaconda\\envs\\fchatbot\\lib\\site-packages (from sentence-transformers) (0.34.0)\n",
+      "Requirement already satisfied: filelock in e:\\anaconda\\envs\\fchatbot\\lib\\site-packages (from huggingface-hub>=0.4.0->sentence-transformers) (3.16.1)\n",
+      "Requirement already satisfied: fsspec>=2023.5.0 in e:\\anaconda\\envs\\fchatbot\\lib\\site-packages (from huggingface-hub>=0.4.0->sentence-transformers) (2025.3.0)\n",
+      "Requirement already satisfied: packaging>=20.9 in e:\\anaconda\\envs\\fchatbot\\lib\\site-packages (from huggingface-hub>=0.4.0->sentence-transformers) (24.2)\n",
+      "Requirement already satisfied: pyyaml>=5.1 in e:\\anaconda\\envs\\fchatbot\\lib\\site-packages (from huggingface-hub>=0.4.0->sentence-transformers) (6.0.2)\n",
+      "Requirement already satisfied: requests in e:\\anaconda\\envs\\fchatbot\\lib\\site-packages (from huggingface-hub>=0.4.0->sentence-transformers) (2.32.4)\n",
+      "Requirement already satisfied: typing-extensions>=3.7.4.3 in e:\\anaconda\\envs\\fchatbot\\lib\\site-packages (from huggingface-hub>=0.4.0->sentence-transformers) (4.12.2)\n",
+      "Requirement already satisfied: sympy in e:\\anaconda\\envs\\fchatbot\\lib\\site-packages (from torch>=1.6.0->sentence-transformers) (1.13.3)\n",
+      "Requirement already satisfied: networkx in e:\\anaconda\\envs\\fchatbot\\lib\\site-packages (from torch>=1.6.0->sentence-transformers) (3.1)\n",
+      "Requirement already satisfied: jinja2 in e:\\anaconda\\envs\\fchatbot\\lib\\site-packages (from torch>=1.6.0->sentence-transformers) (3.1.6)\n",
+      "Requirement already satisfied: colorama in e:\\anaconda\\envs\\fchatbot\\lib\\site-packages (from tqdm->sentence-transformers) (0.4.6)\n",
+      "Requirement already satisfied: regex!=2019.12.17 in e:\\anaconda\\envs\\fchatbot\\lib\\site-packages (from transformers<5.0.0,>=4.6.0->sentence-transformers) (2024.11.6)\n",
+      "Requirement already satisfied: tokenizers<0.21,>=0.20 in e:\\anaconda\\envs\\fchatbot\\lib\\site-packages (from transformers<5.0.0,>=4.6.0->sentence-transformers) (0.20.3)\n",
+      "Requirement already satisfied: safetensors>=0.4.1 in e:\\anaconda\\envs\\fchatbot\\lib\\site-packages (from transformers<5.0.0,>=4.6.0->sentence-transformers) (0.5.3)\n",
+      "Requirement already satisfied: click in e:\\anaconda\\envs\\fchatbot\\lib\\site-packages (from nltk->sentence-transformers) (8.1.8)\n",
+      "Requirement already satisfied: joblib in e:\\anaconda\\envs\\fchatbot\\lib\\site-packages (from nltk->sentence-transformers) (1.4.2)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in e:\\anaconda\\envs\\fchatbot\\lib\\site-packages (from scikit-learn->sentence-transformers) (3.5.0)\n",
+      "Requirement already satisfied: pillow!=8.3.*,>=5.3.0 in e:\\anaconda\\envs\\fchatbot\\lib\\site-packages (from torchvision->sentence-transformers) (10.4.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in e:\\anaconda\\envs\\fchatbot\\lib\\site-packages (from jinja2->torch>=1.6.0->sentence-transformers) (2.1.5)\n",
+      "Requirement already satisfied: charset_normalizer<4,>=2 in e:\\anaconda\\envs\\fchatbot\\lib\\site-packages (from requests->huggingface-hub>=0.4.0->sentence-transformers) (3.4.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in e:\\anaconda\\envs\\fchatbot\\lib\\site-packages (from requests->huggingface-hub>=0.4.0->sentence-transformers) (3.10)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in e:\\anaconda\\envs\\fchatbot\\lib\\site-packages (from requests->huggingface-hub>=0.4.0->sentence-transformers) (2.2.3)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in e:\\anaconda\\envs\\fchatbot\\lib\\site-packages (from requests->huggingface-hub>=0.4.0->sentence-transformers) (2025.7.14)\n",
+      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in e:\\anaconda\\envs\\fchatbot\\lib\\site-packages (from sympy->torch>=1.6.0->sentence-transformers) (1.3.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install sentence-transformers\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "12b21997",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "Could not import sentence_transformers python package. Please install it with `pip install sentence_transformers`.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "File \u001b[1;32me:\\Anaconda\\envs\\fchatbot\\lib\\site-packages\\langchain\\embeddings\\huggingface.py:51\u001b[0m, in \u001b[0;36mHuggingFaceEmbeddings.__init__\u001b[1;34m(self, **kwargs)\u001b[0m\n\u001b[0;32m     50\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m---> 51\u001b[0m     \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01msentence_transformers\u001b[39;00m\n\u001b[0;32m     53\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m exc:\n",
+      "File \u001b[1;32me:\\Anaconda\\envs\\fchatbot\\lib\\site-packages\\sentence_transformers\\__init__.py:3\u001b[0m\n\u001b[0;32m      2\u001b[0m __MODEL_HUB_ORGANIZATION__ \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msentence-transformers\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdatasets\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m SentencesDataset, ParallelSentencesDataset\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mLoggingHandler\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m LoggingHandler\n",
+      "File \u001b[1;32me:\\Anaconda\\envs\\fchatbot\\lib\\site-packages\\sentence_transformers\\datasets\\__init__.py:3\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mNoDuplicatesDataLoader\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m NoDuplicatesDataLoader\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mParallelSentencesDataset\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ParallelSentencesDataset\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mSentencesDataset\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m SentencesDataset\n",
+      "File \u001b[1;32me:\\Anaconda\\envs\\fchatbot\\lib\\site-packages\\sentence_transformers\\datasets\\ParallelSentencesDataset.py:4\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mgzip\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m SentenceTransformer\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mreaders\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m InputExample\n",
+      "File \u001b[1;32me:\\Anaconda\\envs\\fchatbot\\lib\\site-packages\\sentence_transformers\\SentenceTransformer.py:12\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtransformers\u001b[39;00m\n\u001b[1;32m---> 12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mhuggingface_hub\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m HfApi, HfFolder, Repository, hf_hub_url, cached_download\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'cached_download' from 'huggingface_hub' (e:\\Anaconda\\envs\\fchatbot\\lib\\site-packages\\huggingface_hub\\__init__.py)",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[82], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m embeddings \u001b[38;5;241m=\u001b[39m \u001b[43mdownload_hugging_face_embeddings\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m  \n",
+      "Cell \u001b[1;32mIn[79], line 3\u001b[0m, in \u001b[0;36mdownload_hugging_face_embeddings\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdownload_hugging_face_embeddings\u001b[39m():\n\u001b[1;32m----> 3\u001b[0m     embeddings \u001b[38;5;241m=\u001b[39m \u001b[43mHuggingFaceEmbeddings\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel_name\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mTheBloke/Llama-2-7B-Chat-GGML\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m embeddings\n",
+      "File \u001b[1;32me:\\Anaconda\\envs\\fchatbot\\lib\\site-packages\\langchain\\embeddings\\huggingface.py:54\u001b[0m, in \u001b[0;36mHuggingFaceEmbeddings.__init__\u001b[1;34m(self, **kwargs)\u001b[0m\n\u001b[0;32m     51\u001b[0m     \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01msentence_transformers\u001b[39;00m\n\u001b[0;32m     53\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m exc:\n\u001b[1;32m---> 54\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m(\n\u001b[0;32m     55\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCould not import sentence_transformers python package. \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     56\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPlease install it with `pip install sentence_transformers`.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     57\u001b[0m     ) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mexc\u001b[39;00m\n\u001b[0;32m     59\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mclient \u001b[38;5;241m=\u001b[39m sentence_transformers\u001b[38;5;241m.\u001b[39mSentenceTransformer(\n\u001b[0;32m     60\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel_name, cache_folder\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcache_folder, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel_kwargs\n\u001b[0;32m     61\u001b[0m )\n",
+      "\u001b[1;31mImportError\u001b[0m: Could not import sentence_transformers python package. Please install it with `pip install sentence_transformers`."
+     ]
+    }
+   ],
+   "source": [
+    "embeddings = download_hugging_face_embeddings()  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6cd06c1",
    "metadata": {},
    "outputs": [],
    "source": []
